force-app/main/default/objects/Account_Assignment_Rule__mdt/Account_Assignment_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines geographic criteria for the automatic assignment of OwnerId, Integration_Specialist__c, and Development_Specialist__c on the Account object.</description>
    <label>Account Assignment Rule</label>
    <pluralLabel>Account Assignment Rules</pluralLabel>
</CustomObject>