force-app/main/default/objects/Account_Assignment_Rule__mdt/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>Comma-separated country values (e.g. Australia,AU,AUS). Blank = wildcard.</description>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>