force-app/main/default/objects/Account_Assignment_Rule__mdt/fields/Development_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Development_Specialist__c</fullName>
    <description>18-character Salesforce ID of the Development Specialist (maps to Lookup(User) on Account).</description>
    <label>Development Specialist</label>
    <length>18</length>
    <type>Text</type>
</CustomField>