force-app/main/default/objects/Account_Assignment_Rule__mdt/fields/Integration_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Integration_Specialist__c</fullName>
    <description>18-character Salesforce ID of the Integration Specialist (maps to Lookup(User) on Account).</description>
    <label>Integration Specialist</label>
    <length>18</length>
    <type>Text</type>
</CustomField>