force-app/main/default/objects/Account_Assignment_Rule__mdt/validationRules/Require_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Owner</fullName>
    <active>true</active>
    <description>Ensures OwnerId__c is always populated so the rule can assign a valid owner.</description>
    <errorConditionFormula>ISBLANK(OwnerId__c)</errorConditionFormula>
    <errorMessage>An Owner ID is required to save this rule.</errorMessage>
</ValidationRule>