force-app/main/default/objects/Account_Assignment_Rule__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>Order__c</columns>
    <columns>BillingCountry__c</columns>
    <columns>BillingState__c</columns>
    <columns>BillingPostalCode__c</columns>
    <columns>OwnerId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>